# scAgent_v1.0

./: .gitignore  COMPREHENSIVE_CLEAN_SUCCESS_REPORT.md  DEEP_ANALYSIS_ALGORITHM_REPORT.md  FILTERING_STRATEGY_INNOVATION_REPORT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USER_GUIDE.md  debug_comprehensive_clean.py  debug_data_loading.py  debug_filtering.py  debug_human_data.py  debug_intelligent_filtering.py  debug_phase1_critical.py  debug_species_fields.py  debug_test.py  debug_test2.py  download_human_scrna.sh  install.sh  pyproject.toml  scAgent_data_clean_framework.py  test_full_comprehensive_clean.py  test_scagent.py
scAgent/cli/: __init__.py  __main__.py  commands.py  main.py
scripts/: add_more_data.py  init_database.py
